Review comments + style/nits